aws-nlb-ha-asg/terraform/network.tf
# Create AWS main VPC
resource "aws_vpc" "main" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  tags = {
    Name     = "aws-nlb-vpc"
    git_org  = "gbrandyb"
    git_repo = "NGINX-Demos"
  }
}

# Create AWS main subnet
resource "aws_subnet" "main" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.0.0/24"
  map_public_ip_on_launch = true
  tags = {
    Name     = "aws-nlb-subnet"
    git_org  = "gbrandyb"
    git_repo = "NGINX-Demos"
  }
}

# Create AWS security group
resource "aws_security_group" "main" {
  name        = "aws-nlb-sec-grp"
  description = "Security group for AWS NLB"
  vpc_id      = aws_vpc.main.id
  tags = {
    Name     = "aws-nlb-sec-grp"
    git_org  = "gbrandyb"
    git_repo = "NGINX-Demos"
  }
  ingress {
    from_port = 80
    to_port   = 80
    protocol  = "tcp"
    cidr_blocks = [
      "0.0.0.0/0",
    ]
  }
  ingress {
    from_port = 8080
    to_port   = 8080
    protocol  = "tcp"
    cidr_blocks = [
      "0.0.0.0/0",
    ]
  }
  egress {
    from_port = 80
    to_port   = 80
    protocol  = "tcp"
    cidr_blocks = [
      "0.0.0.0/0",
    ]
  }
  egress {
    from_port = 443
    to_port   = 443
    protocol  = "tcp"
    cidr_blocks = [
      "0.0.0.0/0",
    ]
  }
}

# Create AWS internet gateway
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name     = "aws-nlb-gtwy"
    git_org  = "gbrandyb"
    git_repo = "NGINX-Demos"
  }
}

# Configure AWS network route
resource "aws_route" "main" {
  route_table_id         = aws_vpc.main.main_route_table_id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.main.id
}
